--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "webpack": "4.19.1"
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -39,6 +38,7 @@
     "karma-webpack": "^2.0.13",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "4.19.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
   }
