--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/karma/bin/karma start karma.conf.js",
     "build": "webpack --mode development",
-    "start": "webpack-dev-server --open",
+    "start": "npm run build; webpack-dev-server --open",
     "lint": "eslint src/*.js"
   },
   "keywords": [],
