--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "weekdaycalculator",
+  "name": "webpack-updated",
   "version": "1.0.0",
-  "description": "Calculate day of week",
+  "description": "webpack template for epicodus setup",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start karma.conf.js",
+    "test": "karma start karma.conf.js",
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open",
+    "start": "npm run build && webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js"
   },
+  "repository": {
+    "type": "git"
+  },
   "keywords": [],
-  "author": "Tessa Sullivan, Dylan Crocker",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "webpack": "^4.32.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
-    "eslint-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.0.6",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "^2.99.0",
-    "karma": "^2.0.0",
+    "@babel/core": "^7.4.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-jquery": "^0.2.2",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jquery": "^0.2.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.13",
-    "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "4.19.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "karma-webpack": "^3.0.5",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
